--- a/css/style.css
+++ b/css/style.css
@@ -679,7 +679,7 @@ main {
     font-size: 0;
 
     background-color: rgba(255, 231, 81, 0.4);
-
+    cursor: pointer;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
