--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1297,7 +1297,7 @@ main {
 
 .message-error {
     position: absolute;
-    top: 30px;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
     display: none;
@@ -1307,11 +1307,12 @@ main {
     padding: 5px;
     padding-left: 50px;
     padding-right: 15px;
-    background-color: #d7d4ad;
-    color: #000000;
+    background-color: #232321;
+    color: #ffffff;
     text-transform: none;
     border-radius: 7px;
     z-index: 1;
+    box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.7);
 }
 
 .message-error::before {
@@ -1322,7 +1323,7 @@ main {
     transform: translateX(-50%) rotate(45deg);
     width: 30px;
     height: 30px;
-    background-color: #d7d4ad;
+    background-color: #232321;
     z-index: -1;
 }
 
@@ -1337,7 +1338,7 @@ main {
     transform: translateY(-50%);
     width: 30px;
     height: 30px;
-    background-color: #d75f34;
+    background-color: red;
     text-transform: uppercase;
     font-size: 25px;
     color: #ffffff;
